# WorldEdit-Build-Menu

./: README.md  add_json_parsing.py  add_missing_json.py  comprehensive_fix.py  final_fix.py  fix_all_callbacks.py  fix_forms.py  fix_modal_callbacks.py  pyproject.toml
OnistoneBuilderLite/: INSTALLATION.md  LICENSE  PLUGIN_SUMMARY.md  README.md  __init__.py  blueprints.py  clipboard.py  config.py  config.toml  main.py  menu.py  paste.py  permissions.py  plugin.yml  pyproject.toml  selection.py  storage.py  ui_components.py  undo.py  zones.py
src/endstone_worldedit/: blueprints.py  build_areas.py  builder_menu.py  plugin.py  shape_tool_menu.py  smooth_tool_menu.py  structure_utils.py  ui_components.py  utils.py  zones.py
src/endstone_worldedit/commands/: area.py  areainfo.py  blueprint.py  bmenu.py  builder.py  copy.py  cut.py  cyl.py  flip.py  hcyl.py  hpyramid.py  hsphere.py  myareas.py  paste.py  pos1.py  pos2.py  pyramid.py  replace.py  rotate.py  schem.py  sel.py  set.py  shapetool.py  smooth.py  smoothtool.py  sphere.py  wand.py
temp_extract/endstone_worldedit/: builder_menu.py
