[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-worldedit"
version = "3.1.0"
description = "A comprehensive WorldEdit plugin for Endstone with Builder's Menu, Build Areas, Blueprints, and Zones."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "endstone>=0.5.0",
    "nbtlib"
]

[project.entry-points."endstone"]
"worldedit" = "endstone_worldedit.plugin:WorldEditPlugin"
