[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onistone-builder-lite"
version = "1.0.0"
description = "A lite builder menu plugin for Endstone (Minecraft Bedrock)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "OnistoneBuilderLite Team"}
]
keywords = ["minecraft", "bedrock", "endstone", "plugin", "builder", "worldedit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "endstone>=0.5.0",
    "server-ui>=2.1.0b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.entry-points."endstone"]
OnistoneBuilderLite = "OnistoneBuilderLite.main:OnistoneBuilderLite"

[tool.setuptools]
packages = ["OnistoneBuilderLite"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

